feat: add ServerListener